<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:layout_centerVertical="true"
              android:layout_centerHorizontal="true" tools:context=".Login"
              android:id="@+id/l1">


    <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1">

        <EditText
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:id="@+id/editText"
                android:layout_gravity="center_horizontal"
                android:hint="@string/user"
                android:textAlignment="center"
                android:layout_weight="1"
                android:textSize="20dp"/>

        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="8"
                android:id="@+id/editText2"
                android:hint="@string/pass"
                android:layout_weight="1"
                android:layout_gravity="center_horizontal"
                android:textSize="20dp"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:text="@string/login"
                android:id="@+id/buttonLogin"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:onClick="tryLogin"/>
    </LinearLayout>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="15dp" android:id="@+id/x">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:text="@string/reg"
                android:id="@+id/textView3"
                android:layout_weight="1"
                android:textSize="16dp" android:layout_marginBottom="8dp" android:layout_gravity="center_horizontal"/>

        <ImageView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:id="@+id/mail"
                android:src="@drawable/mail"
                android:layout_weight="1"
                android:onClick="mail" android:layout_marginBottom="15dp"/>

        <!-- Esto lo puedo cambiar por un botón normal-->

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:text="@string/logt"
                android:id="@+id/textView"
                android:layout_weight="1"
                android:textSize="16dp" android:layout_marginBottom="8dp" android:layout_gravity="center_horizontal"/>

        <com.twitter.sdk.android.core.identity.TwitterLoginButton
                android:id="@+id/twitter_login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true" android:layout_gravity="center_horizontal"
                />

    </LinearLayout>


</LinearLayout>
